# python_basics

./: Readme.md  pyproject.toml  read_csv.ipynb
