[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["Media-RGB <saber.hemaidia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.3.4"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
